# account

./: .env.example  .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  build.rs  diesel.toml
.cargo/: config.toml
.sqlx/: query-02d51edf65163f311dfa215da26acb2bc8c02735e2f79782c612d5fe0cf01042.json  query-08c4a5721982ecd267ebc515b866c61aaef9395170430a58dcd7ac78f8cc75b2.json  query-248fc3dbfadb793f1f380486d9c1c95230d4d5a7ee3cb66d9382b7f0522c5e82.json  query-3c9b1695f8ae49e4308c048de98c1c262351465b6f102e98912f67442a1f54d9.json  query-48710e0b87742cc3fef816b3c95604095f71324011e7093ec37af15da8c158f4.json  query-566221b869f293e6c721e2e8bbf3087943e5816a98cdce151302055c58bd1183.json  query-5bd26d4c9e701bde77ce598fea2ce0b98ea2c7de03e71ac704c3ba047162c0b2.json  query-606364c79e0990deb07dfbe6c32b3d302d083ec5333f3a5ce04113c38a041100.json  query-6c1df0b05553305ba847f571a5859bf11353f28c25e4f81268e9379b5b2cb375.json  query-6de07eba2f12b15f541d129b83664a272a0d3ac9e929e70b399582fa3f14166d.json  query-93960465bbf8f670891d49b95fc52257c0ef596eee2d9a0e6a7d0aad03de4421.json  query-9d3cee43a86cead9a6d078abc1266fc2a97ac6e25a9733d1d20faf555c67abe1.json  query-b08800e65b5b8a788e5a5d2f2036bce05bcd8c74c0b5077d786e35ee290447a2.json  query-b16ba4b6c1b7d1c207e94515268c3bbd90d4bcf92d20203cba5afb2664f4bb8a.json  query-c8d50662530cac49c4261fb321cd15f9e4bafdfca12d2130a873d44a88dd435b.json  query-d8a0ba20ad0db4ba8821964944b00dd589cdd9cd0ac91c27edf3f79ba4174a18.json  query-e5a2f7f28c3d7b9524d3dce48a9e47d6180ff634ebf59f3a1efd92b797170ac2.json  query-eafa97669e8ec04f1dc0a8e05d417f12ffeeb26a5eabca323abfed0e1d7bcbea.json
mii/: Cargo.toml
mii/src/: lib.rs
res/: conntest.html
res/agreement/: DE.xml
res/email/: confirmationTemplate.html
src/: conntest.rs  data_wrapper.rs  dsresponse.rs  email.rs  error.rs  main.rs  mii_util.rs  xml.rs
src/account/: account.rs
src/graphql/: mod.rs
src/grpc/: mod.rs
src/json_api/: mod.rs
src/json_api/oauth/: generate_token.rs  mod.rs
src/json_api/users/: mii.rs  mod.rs  profile.rs
src/nnid/: agreements.rs  create_account.rs  devices.rs  email.rs  mapped_ids.rs  mod.rs  people.rs  person_exists.rs  pid_distribution.rs  provider.rs  support.rs  timezones.rs
src/nnid/oauth/: generate_token.rs  mod.rs
src/papi/: login.rs  mod.rs  user.rs
