[package]
name = "account"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0.218", features = ["derive"] }
log = "0.4.26"
quick-xml = { version = "0.37.2", features = ["serialize"] }
tokio = "1.43.0"
dotenvy = "0.15.7"
once_cell = "1.20.3"
serde_json = "1.0.139"
chrono = { version =  "0.4.39", features = ["serde"] }
argon2 = "0.5.3"
sha2 = "0.10.8"
bytemuck = "1.21.0"
base64 = "0.22.1"
hex = "0.4.3"
thiserror = "2.0.11"
bcrypt = "0.17.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono" ] }

