[package]
name = "account"
version = "0.1.0"
edition = "2024"

[profile.prod]
inherits = "release"
overflow-checks = false
strip = true
debug = false
debug-assertions = false
lto = true
incremental = false

[dependencies]
rocket = "0.5.1"
serde = { version = "1.0.218", features = ["derive"] }
log = "0.4.26"
quick-xml = { version = "0.37.2", features = ["serialize"] }
tokio = "1.43.0"
dotenvy = "0.15.7"
once_cell = "1.20.3"
serde_json = "1.0.139"
chrono = { version =  "0.4.39", features = ["serde"] }
argon2 = "0.5.3"
sha2 = "0.10.8"
bytemuck = { version =  "1.21.0", features = ["derive"] }
base64 = "0.22.1"
hex = "0.4.3"
thiserror = "2.0.11"
bcrypt = "0.17.0"
sqlx = { version = "0.8.3", features = [ "runtime-tokio", "tls-native-tls", "postgres", "chrono", "ipnetwork" ] }
aes = "0.8.4"
hmac = "0.12.1"
md-5 = "0.10.6"
cbc = "0.1.2"
mii = { path = "./mii" }
minio = { git = "https://github.com/minio/minio-rs.git" }
crc32fast = "1.4.2"
gxhash = "3.4.1"

juniper = { version =  "0.16.1", features = ["chrono"] }
juniper_rocket = "0.9.0"

tonic = "0.12.3"
prost = "0.13.4"
lettre = "0.11.15"
rand = "0.8.5"



[build-dependencies]
tonic-build = "0.12.3"
